# surfyng

./: .gitignore  README.md  minify.sh  package-lock.json
auto_navigator/: auto_navigator.py  lbc_auto_navigator.py  properties_spider.py  url_builder.py
auto_navigator/tests/: spiders_tests.py
bot/: Serializer.py  agenceprincipale.py  arthurimmo.py  avendrealouer.py  bienici.py  century21.py  config.ini  config_notaires.ini  efficity.py  eraimmo.py  etreproprio.py  fnaim.py  foncia.py  guyhoquet.py  hash_id.py  iadfrance.py  idal.py  inseecode_postalcode.py  laforet.py  leboncoin.py  lefigaroimmobilier.py  logicimmo.py  nestenn.py  notaires.py  orpi.py  pap.py  paruvendu.py  properties_spider.py  properties_type.py  search_features.py  seloger.py  spiders  stephaneplazaimo.py  surfyn.py  url_builder.py
bot/data/: avendrealouer_code.csv  correspondance_codeinsee_codepostal_iledefrance.csv  iadfrance_code.csv  logicimmo_code.csv  osm_id_insee.csv  osm_id_insee_iledefrance.csv  pap_code.csv
bot/tests/: hash_id_tests.py  spiders_tests.py
bot/thrift_generated/dynamodb_access/: __init__.py  dynamodb_access.py  (+1 more)
portal/: Dockerfile  Jenkinsfile  Readme.md  docker-compose.yml  pom.xml
portal/webapp/: package-lock.json  package.json
prerendering/: config.json  package-lock.json  package.json  server.mjs  ssr.mjs
scripts/: crawl_and_analyze.sh  crawl_pricebym2.sh  get_actu_files.sh  purge_db.sh  restart_services.sh
sf_services/: Makefile  sf_services.thrift  sf_services_server.cpp
sf_services/adapt_model/: CMakeLists.txt  config.ini
sf_services/adapt_model/inc/: TransformTable.h
sf_services/adapt_model/src/: TransformTable.cpp
sf_services/deposit/: config.ini  depositservice.thrift  depositserviceHandler.py  templates.py
sf_services/duplicates_fix/: CMakeLists.txt  config.ini  duplicates_fix.cpp
sf_services/dynamodb_access/: CMakeLists.txt  README.md  dynamodb_access.thrift  dynamodb_client.thrift
sf_services/dynamodb_access/inc/: dynamodb_access_handler.h
sf_services/dynamodb_access/src/: dynamodb_access_handler.cpp  dynamodb_access_server.cpp
sf_services/dynamodb_access/thrift_generated/: dynamodb_access.cpp  dynamodb_access.h  dynamodb_access_constants.cpp  dynamodb_access_constants.h  dynamodb_access_types.cpp  dynamodb_access_types.h  dynamodb_client.cpp  dynamodb_client.h  dynamodb_client_constants.cpp  dynamodb_client_constants.h  dynamodb_client_types.cpp  dynamodb_client_types.h
sf_services/emailalertservice/: config_notify.ini  emailalertservice.thrift  emailalertserviceHandler.py  notifyUsers.py  requirements.txt  template_notification_email.py
sf_services/extracthousingprice/: CMakeLists.txt  config.ini
sf_services/extracthousingprice/inc/: extracthousingprice.h
sf_services/extracthousingprice/src/: extracthousingprice.cpp
sf_services/mail/: sendmail.py  sendmail.thrift
sf_services/opencv/: CMakeLists.txt  similar_images_matcher.cpp
sf_services/rest_server/: CMakeLists.txt  config.ini
sf_services/rest_server/inc/: DBaccess.h  DepositAccess.h  EmailAlertAccess.h  EstimatorAccess.h  HttpRequestHandler.h  SendEmailAccess.h
sf_services/rest_server/src/: DBaccess.cpp  DepositAccess.cpp  EmailAlertAccess.cpp  EstimatorAccess.cpp  HttpRequestHandler.cpp  SendEmailAccess.cpp  main.cpp
sf_services/rest_server_v2/: CMakeLists.txt  http_server_async_ssl.cpp
sf_services/sf_classifier/: CMakeLists.txt
sf_services/sf_classifier/config/: ad_data  ad_similar  sf_classifier.ini
sf_services/sf_classifier/inc/: Classifier.h  Criteria.h  CriteriaManager.h  PurgeRealEstateAd.h  RealEstateAd.h  RealEstateAdClassifier.h
sf_services/sf_classifier/src/: Classifier.cpp  Criteria.cpp  CriteriaManager.cpp  Main.cpp  PurgeRealEstateAd.cpp  RealEstateAd.cpp  RealEstateAdClassifier.cpp  sf_classifier.cpp
sf_services/sf_classifier/test/: CMakeLists.txt  sf_classifier_test.cpp
sf_services/sf_utils/: CMakeLists.txt
sf_services/sf_utils/test/: CMakeLists.txt  test_algorithm.cpp  test_geolocal.cpp
sf_services/thrift_generated/: Sf_service.cpp  Sf_service.h  sf_services_constants.cpp  sf_services_constants.h  sf_services_types.cpp  sf_services_types.h
sklearn/: Dockerfile  config.ini  house_prediction.thrift  house_price_prediction_experiments.py  predict_house_price.py
sklearn/thrift_generated/: house_prediction.cpp  house_prediction.h  house_prediction_constants.cpp  house_prediction_constants.h  house_prediction_types.cpp  house_prediction_types.h
spiders/: config.ini
spiders/data/: avendrealouer_code.csv  iadfrance_code.csv  inseecode_postalcode_bycity.csv  logicimmo_code.csv  osm_id_insee.csv  pap_code.csv
tensorflow/: classify_images.py  surfyn.py
tools/duplicates_fix/: duplicates_fix.cpp
tools/dyndb_copy/: CMakeLists.txt  dyndb_copy.cpp
tools/minify/: minify.sh  package-lock.json
web/: Sf_service.php  achat-immobilier.html  actu_pagination.js  actualite-immo.html  actualite-immobilier.html  ads.txt  agence-immobiliere-boulogne-billancourt-92100.html  agence-immobiliere-colombes-92700.html  agence-immobiliere-houilles-78800.html  agence-immobiliere-nanterre-92000.html  agence-immobiliere-puteaux-92800.html  annonce_detaille.html  announce_deposit.js  announce_detail.css  announce_detail_surfyn.html  autocomplete.js  conseil-immobilier.html  criterederecherche.html  criteria.html  demenageur.html  deposer-annonce-gratuite.html  deposer-une-annonce.html  depot-annonce-2.html  depot-annonce.html  dropdownmenu.js  email.js  erreur.html  estimate_criteria.html  estimate_criteria_det.html  estimate_house_price.js  estimate_loading.html  estimate_results.html  estimate_results.js  estimation-bien-immobilier-details.html  estimation-immobiliere-en-ligne.html  estimation_encours.html  estimation_immobiliere.html  estimation_immobiliere_detaille.html  fetch_details.js  fetch_details_surfyn.js  (+36 more)
web/data/: announces_details1.json  announces_details2.json  announces_details3.json  announces_details4.json  announces_summary.json
web/poc/: Types.php  propertyresults.php
web/sitemap/: sitemap.xml
web/tarteaucitron/: tarteaucitron.js
(+221 files in other folders)
